Fix more gallery alignment issues [WEB-1294]

--- a/frontend/scss/organisms/_o-gallery.scss
+++ b/frontend/scss/organisms/_o-gallery.scss
@@ -4,12 +4,6 @@
   background-color: $color__bg--gallery;
   color: $color__text--contrast;
   transform: translateZ(0);
-
-  @include breakpoint('xlarge') {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: flex-start;
-  }
 }
 
 .o-gallery__title {
@@ -143,15 +137,15 @@
   .o-gallery__title,
   .o-gallery__caption {
     @include breakpoint('small+') {
-      padding-right: colspan(8, small);
+      width: colspan(30, small);
     }
 
     @include breakpoint('medium+') {
-      padding-right: colspan(20, medium);
+      width: colspan(18, medium);
     }
 
     @include breakpoint('large+') {
-      padding-right: colspan(20, large);
+      width: colspan(18, large);
     }
   }
 
@@ -261,15 +255,15 @@
   .o-gallery__title,
   .o-gallery__caption {
     @include breakpoint('small+') {
-      padding-right: colspan(8, small);
+      width: colspan(30, small);
     }
 
     @include breakpoint('medium+') {
-      padding-right: colspan(28, medium);
+      width: colspan(18, medium);
     }
 
     @include breakpoint('large+') {
-      padding-right: colspan(28, large);
+      width: colspan(18, large);
     }
   }
 
@@ -341,7 +335,6 @@
   .o-gallery__media-wrapper {
     margin-right: colspan(3, xsmall, 0, true);
     margin-bottom: 24px;
-    margin-left: colspan(3, xsmall, 0, true);
     padding-bottom: 32px;
 
     overflow: hidden;
@@ -356,23 +349,19 @@
     @include breakpoint('small+') {
       margin-right: colspan(3, small, 0, true);
       margin-bottom: 32px;
-      margin-left: colspan(3, small, 0, true);
     }
 
     @include breakpoint('medium+') {
       margin-right: colspan(3, medium, 0, true);
       margin-bottom: 52px;
-      margin-left: colspan(3, medium, 0, true);
     }
 
     @include breakpoint('large+') {
       margin-right: colspan(3, large, 0, true);
-      margin-left: colspan(3, large, 0, true);
     }
 
     @include breakpoint('xlarge') {
       margin-right: colspan(3, xlarge, 0, true);
-      margin-left: colspan(3, xlarge, 0, true);
     }
   }
 
@@ -421,7 +410,20 @@
     margin-left: colspan(2, xsmall);
 
     &:first-child {
-      margin-left: colspan(3, xsmall);
+      margin-left: 0;
+
+
+      @include breakpoint('small+') {
+        margin-left: 0;
+      }
+
+      @include breakpoint('medium+') {
+        margin-left: 0;
+      }
+
+      @include breakpoint('large+') {
+        margin-left: 0;
+      }
     }
 
     @include breakpoint('small+') {
